--- a/Tumblr-Feed/Base.lproj/Main.storyboard
+++ b/Tumblr-Feed/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I8z-90-bF5">
-                                <rect key="frame" x="0.0" y="54" width="375" height="286"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="276"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -81,6 +81,9 @@
                         <viewLayoutGuide key="safeArea" id="kIo-BO-zjh"/>
                     </view>
                     <navigationItem key="navigationItem" id="7rK-9n-4fW"/>
+                    <connections>
+                        <outlet property="selectedImageView" destination="I8z-90-bF5" id="Usa-UG-HfN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ATe-cp-OkB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
